# CS4032_PROJECT

./: .gitignore  README.md
authentication_service/authentificationServer/: authentificationServer.cabal  docker-compose.yml  stack.yaml
authentication_service/authentificationServer/.stack-work/install/x86_64-linux-dkda49f7ca9b244180d3cfb1987cbc9743/lts-7.9/8.0.1/flag-cache/: MonadRandom-0.4.2.3-8TfCm6PGvGYB7omozORhov  StateVar-1.1.0.4-CJpWsiXJdd89SnV9dZtTwc  aeson-0.11.2.1-5ZQWuTFmffALcfpzDCXoOz  aeson-pretty-0.8.2-FONEppYcAcNL67yNmD5AQ1  ansi-terminal-0.6.2.3-448ipfN5j28Ha0AgPiJmdI  ansi-wl-pprint-0.6.7.3-LVnipygDrAR1FEMFhjxcQX  appar-0.1.4-1in4Ewd8JBkAYDZSWXLSe0  asn1-encoding-0.9.4-2Zu5ldLYD571Aw26w0CWF6  asn1-parse-0.9.4-Ai83ACtrOir9VlSOQtWm2F  asn1-types-0.3.2-4Rz223aP8OG6vnHYiLX5Ab  async-2.1.0-J6Pl8k3L4PKGEpjYdgwiIf  attoparsec-0.13.1.0-5Olk1S76r1CDYzFS6V3sZR  authentificationServer-0.1.0.0-5jap7c8VWAJILn9pMXEnq  auto-update-0.1.4-GAesfFmqoZzBz6e09kRyzb  base-compat-0.9.1-tmPpmtbHbvIDjFWbkjGrR  base-orphans-0.5.4-5IQvrjd7gNP548VkOOyIq6  base16-bytestring-0.1.1.6-5dPoF8dzhwzBaEB2MvnmIS  base64-bytestring-1.0.0.1-In9M41tLtcS9QYt3QpGpNY  bifunctors-5.4.1-8Xk5Wsnk1fr6rBLkW9MO8p  blaze-builder-0.4.0.2-KWDLbdBYSBoALiMW0LHIz1  blaze-html-0.8.1.2-2kD96kJB6JEGow1dP8IL6C  blaze-markup-0.7.1.0-5a5pBG0fO8kJX4ke3K7j3D  bson-0.3.2.3-3QA3aP5EtCyCltXUzEKOsQ  bson-generic-0.0.8-DtORpoUHwQhDReLJ5Keop0  byteable-0.1.1-15aIBCArSOBEnGxArzrDTM  byteorder-1.0.4-BbL4c17EpZrL9PcZm0xys9  bytestring-builder-0.10.8.1.0-4GkSrJiY0n01lBdCh7onK  case-insensitive-1.2.0.7-FlqweN7AuKj9EdU2arVEt4  cereal-0.5.4.0-2FJYHGgtE5C3SxaZjt25xS  cipher-aes-0.2.11-6IDqXzfBW6B3WK2bKJbiBh  cmdargs-0.10.14-8WOlFWoK1XlCebTZE2edgd  comonad-5-2RMxpSOQ5MCHLHIelJrHD4  connection-0.2.6-3WwWUk6BHtn4Nkkdi7u09v  contravariant-1.4-KSQE31a7FruKHDlp90hIUT  cookie-0.4.2.1-2a2c54yIyBn79Ul3iLWclJ  cprng-aes-0.6.1-COLYQrn2KP0KrG5tq2u9OS  crypto-cipher-types-0.0.9-Iwzx9devSK6HQoOjujg46u  crypto-random-0.0.9-GQAZIw8UH93GFERaAFFYYo  cryptohash-0.11.9-9KNu0EEbreBFrmNJAeHgYz  cryptonite-0.19-G9PYO4oOEqhDTta2u9rAaU  (+91 more)
authentication_service/authentificationServer/.stack-work/install/x86_64-linux-dkda49f7ca9b244180d3cfb1987cbc9743/lts-7.9/8.0.1/pkgdb/: bson-generic-0.0.8-DtORpoUHwQhDReLJ5Keop0.conf  http-api-data-0.3.2-9RGKpfYtINZ17YsGZel6a3.conf  package.cache  servant-0.9.1.1-8XUirpOC71nDN2DvgcCCiR.conf  servant-client-0.9.1.1-4npTpMkcn0m997J2UXuLAa.conf  servant-lucid-0.7.1-ADrJ7tpGIREHrafsdP1DaR.conf  servant-server-0.9.1.1-F2TynKzcbhXEH9OxiPfV2w.conf
authentication_service/authentificationServer/src/: Lib.hs
client/: client.cabal  (+1 more)
directory-service/: directory-service.cabal  docker-compose.yml  stack.yaml
directory-service/src/: Lib.hs  README.md
echo_service/echoServer/: .echoServer.cabal.swp  echoServer.cabal  stack.yaml
echo_service/echoServer/.stack-work/install/x86_64-linux-dkda49f7ca9b244180d3cfb1987cbc9743/lts-7.10/8.0.1/flag-cache/: Cabal-1.24.1.0-IrwQRxLtBmMIrR1JspkXtd  HTTP-4000.3.3-JMFhmeoXqbBIjfEWxmijf9  MonadRandom-0.4.2.3-8TfCm6PGvGYB7omozORhov  StateVar-1.1.0.4-CJpWsiXJdd89SnV9dZtTwc  asn1-encoding-0.9.4-2Zu5ldLYD571Aw26w0CWF6  asn1-parse-0.9.4-Ai83ACtrOir9VlSOQtWm2F  asn1-types-0.3.2-4Rz223aP8OG6vnHYiLX5Ab  base-orphans-0.5.4-5IQvrjd7gNP548VkOOyIq6  base16-bytestring-0.1.1.6-5dPoF8dzhwzBaEB2MvnmIS  bifunctors-5.4.1-8Xk5Wsnk1fr6rBLkW9MO8p  bson-0.1.7-EfO3lqdNpyP7R8trpQ6nyr  bson-0.3.2.3-3QA3aP5EtCyCltXUzEKOsQ  bson-generic-0.0.6-30eJELZ6Ijc3ZMPnC8RdU  byteable-0.1.1-15aIBCArSOBEnGxArzrDTM  cabal-install-1.24.0.1  cereal-0.5.4.0-2FJYHGgtE5C3SxaZjt25xS  cipher-aes-0.2.11-6IDqXzfBW6B3WK2bKJbiBh  comonad-5-2RMxpSOQ5MCHLHIelJrHD4  compact-string-fix-0.3.2-DndIO7hdLRnH1KEjhXPArZ  contravariant-1.4-KSQE31a7FruKHDlp90hIUT  cprng-aes-0.6.1-COLYQrn2KP0KrG5tq2u9OS  crypto-cipher-types-0.0.9-Iwzx9devSK6HQoOjujg46u  crypto-random-0.0.9-GQAZIw8UH93GFERaAFFYYo  cryptohash-0.11.9-9KNu0EEbreBFrmNJAeHgYz  cryptohash-sha256-0.11.100.1-CxymMT87vhE9zOHmyydW84  data-binary-ieee754-0.4.4-F1HjhwdV1xx5grS0eMjeg2  distributive-0.5.0.2-Cdz2vLOk85j1doGXLcictT  echoServer-0.1.0.0-5snGOg8SV9S89bypdllnBa  echoServer-0.1.0.0-HgTjGCcrxxbI9PIsFGKvXg  echoServer-0.1.0.0-IM3BaZ44HNEG4WLw1cKo0c  ed25519-0.0.5.0-CpxZaSit3v24CALRG61NQp  either-4.4.1.1-BWHIQ5hdPI1HrEUIKYYfaI  free-4.12.4-Etm59Dm8iExFxAy1L49Ovd  hackage-security-0.5.2.2-Iu0LFZwgQocFPJ9IEpOVCE  hashtables-1.2.1.0-97BixhaJIWTIDAaThqJujl  hourglass-0.2.10-I8h0J4RSF89FN6CuD9x2Xx  lucid-2.9.7-KcFbPMesOP0Hxey7hFZLFI  mongoDB-2.1.1.1-HGeHL7diW4ABP90GyOfvAQ  (+13 more)
echo_service/echoServer/app/: .Main.hs.swp
echo_service/echoServer/src/: .Lib.hs.swp  Lib.hs
lock-service/: LICENSE  docker-compose.yml  lock-service.cabal  stack.yaml
lock-service/.stack-work/docker/_home/: .ssh
lock-service/.stack-work/install/x86_64-linux-dkda49f7ca9b244180d3cfb1987cbc9743/lts-7.10/8.0.1/flag-cache/: bson-generic-0.0.8-DtORpoUHwQhDReLJ5Keop0  file-system-api-0.1.0.0-GjWdoIlqs1cE9wmZtJApaj  http-api-data-0.3.2-9RGKpfYtINZ17YsGZel6a3  lock-service-0.1.0.0-FISXVvz8Jqt9DZrKXe1POs  servant-0.9.1.1-1YvZcaz0OLV3uNDBdJkKrY  servant-client-0.9.1.1-2qgn4HLUhDF108ixpaTeg8  servant-server-0.9.1.1-FKQvXJjQ1586gh3lj2fX3G
lock-service/.stack-work/install/x86_64-linux-dkda49f7ca9b244180d3cfb1987cbc9743/lts-7.10/8.0.1/pkgdb/: bson-generic-0.0.8-DtORpoUHwQhDReLJ5Keop0.conf  file-system-api-0.1.0.0-GjWdoIlqs1cE9wmZtJApaj.conf  http-api-data-0.3.2-9RGKpfYtINZ17YsGZel6a3.conf  lock-service-0.1.0.0-FISXVvz8Jqt9DZrKXe1POs.conf  package.cache  servant-0.9.1.1-1YvZcaz0OLV3uNDBdJkKrY.conf  servant-client-0.9.1.1-2qgn4HLUhDF108ixpaTeg8.conf  servant-server-0.9.1.1-FKQvXJjQ1586gh3lj2fX3G.conf
lock-service/src/: .Lib.hs.swp  Lib.hs
my-client/: client.cabal  stack.yaml
my-client/src/: Client.hs  Lib.hs
old-verisions/client-service/: client-service.cabal  stack.yaml
old-verisions/client-service/src/: Lib.hs
simple_text_editor/editor/: editor.cabal
transaction-service/: .stack.yaml.swp  .transaction-service.cabal.swp  LICENSE  docker-compose.yml  stack.yaml  transaction-service.cabal
transaction-service/src/: .Lib.hs.swp  Lib.hs
(+144 files in other folders)
