name:                client
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ddoyle4/client#readme
license:             BSD3
license-file:        LICENSE
author:              David Doyle
maintainer:          ddoyle3@tcd.ie
copyright:           value
category:            value
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Client
  build-depends:       base >= 4.7 && < 5
                      , directory
                      , split
                      , file-system-api
                      , bytestring
                      , io-streams
                      , http-client
  default-language:    Haskell2010

executable client-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , client
                     , directory
                     , split
                     , file-system-api
                     , bytestring
                     , io-streams
                     , http-client
  default-language:    Haskell2010

test-suite client-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , client
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ddoyle4/client
