name:                client-service
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ddoyle4/client-service#readme
license:             BSD3
license-file:        LICENSE
author:              David Doyle
maintainer:          ddoyle3@tcd.ie
copyright:           value
category:            value
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , servant
                     , servant-client
                     , http-client
                     , optparse-applicative
                     , cabal-file-th >= 0.2.4
                     , pretty
                     , Cabal
                     , ansi-terminal
                     , git-embed
                     , file-system-api
  default-language:    Haskell2010

executable client-service-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , client-service
  default-language:    Haskell2010

test-suite client-service-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , client-service
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ddoyle4/client-service
