name:                editor
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/ddoyle4/editor#readme
license:             BSD3
license-file:        LICENSE
author:              David Doyle
maintainer:          ddoyle3@tcd.ie
copyright:           yes
category:            test
build-type:          Simple
cabal-version:       >=1.10

executable editor
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:      base >= 4.7 && < 5,
                      ansi-terminal
